🐛 fix(README.md): change variable name from obstacles to entityList for better semantics 🔀 merge: add new audio and image files for coin ✨ feat(index.css): add animation for coin spinning 🔀 merge: add coin sound effect to AudioManager 🔀 merge: add EntityManager class to manage entities (obstacles and coins) ✨ feat(game.js): add support for collision detection with coins and play coin sound effect 🔀 merge: change ObstacleManager to EntityManager in Game class 🔀 merge: change playJumpSound method to playEffect method in AudioManager 🔀 merge: change Obstacle class to Entity class and add Coin class in entity.js 🔀 merge: change obstacleTimerId to entityTimerId and scheduleAddObstacle to scheduleAddEntity in Game class 🔀 merge: change checkCollision method to handle collision with coins and play coin sound effect

--- a/index.css
+++ b/index.css
@@ -32,14 +32,27 @@ main {
   z-index: 1;
 }
 
-.obstacle {
-  background-image: url('./assets/obstacle.png');
+.obstacle,
+.coin {
   background-size: 100%;
   background-repeat: no-repeat;
   position: absolute;
   bottom: 0;
   width: 50px;
   height: 49px;
+}
+
+.coin {
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  from {
+    transform: rotateY(0deg);
+  }
+  to {
+    transform: rotateY(360deg);
+  }
 }
 
 header {
